feat: fast test for ci file

--- a/.hasci.yml
+++ b/.hasci.yml
@@ -2,13 +2,12 @@ steps:
   - name: test
     image: node:15.4.0-alpine
     commands:
-      - npm ci
       - npm test
 
   - name: check workspace
     image: ubuntu
     commands:
-      - cat result | grep "straight up chillen"
+      - cat testfile | grep "straight up chillen"
 
   - name: a new step
     image: ubuntu
